--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@
 body h1 {
     text-align: center;
 }
-.gridContainer {
-    width: 70rem;
-    height: 70rem;
+#gridContainer {
+    width: 60rem;
+    height: 60rem;
     margin: auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
     border: 2px dashed red;
     position: relative;
     display: flex;
@@ -25,11 +25,26 @@ body h1 {
 }
 
 .innerGrid {
-    width: 6.25%;
-    height: 6.25%;
-    border: 0.01rem solid rgb(161, 155, 155);
+    border: 1px solid rgb(161, 155, 155);
 }
 
 .gridColor {
     background-color: black;
+}
+
+.setBtn {
+    display: block;
+    width: 7rem;
+    margin: 0 auto;
+    margin-top: 1rem;
+    padding: 0.3rem;
+    border-radius: 10% / 50%;
+    border: none;
+    background-color: red;
+    color: white;
+    font-size: 1rem;
+}
+
+.setBtn:hover {
+    background-color: gray;
 }
