--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,47 @@
   padding: 0;
 }
 
+
+
 body h1 {
     text-align: center;
+    color: rgba(255, 217, 0, 0.863);
+    font-style: italic;
+    font-size: 3rem;
 }
 #gridContainer {
-    width: 60rem;
-    height: 60rem;
+    width: 50rem;
+    height: 50rem;
     margin: auto;
-    margin-top: 2rem;
-    border: 2px dashed red;
+    margin-top: 4rem;
     position: relative;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-content: start;
-    
+    background-color: white;
+}
 
+.etchContainer {
+    width: 60rem;
+    height: 70rem;
+    margin: 0 auto;
+    margin-top: 3rem;
+    border: 1px solid red;
+    border-radius: 40px;
+    background-color: red;
+    
+}
+
+.etchNav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 50rem;
+    height: 10rem;
+    margin: 0 auto;
+    margin-top: 2rem;
 }
 
 .innerGrid {
@@ -35,16 +60,23 @@ body h1 {
 .setBtn {
     display: block;
     width: 7rem;
-    margin: 0 auto;
-    margin-top: 1rem;
+    height: 7rem;
     padding: 0.3rem;
-    border-radius: 10% / 50%;
+    border-radius: 50%;
     border: none;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: red;
     font-size: 1rem;
 }
 
 .setBtn:hover {
     background-color: gray;
+}
+
+.Chakra {
+    font-family: 'Chakra Petch', sans-serif;
+}
+
+.title {
+    margin-top: 1.5rem;
 }
